# ufo-vehicle

./: .gitignore  CMakeLists.txt  README.md  cw32f030c8t6.uvguix.Legend  cw32f030c8t6.uvoptx  cw32f030c8t6.uvprojx  download.bat  gb180302utf8.py
Libraries/: startup_cw32f030.s
Libraries/inc/: base_types.h  cw32f030.h  cw32f030_adc.h  cw32f030_atim.h  cw32f030_awt.h  cw32f030_btim.h  cw32f030_crc.h  cw32f030_debug.h  cw32f030_digitalsign.h  cw32f030_dma.h  cw32f030_flash.h  cw32f030_gpio.h  cw32f030_gtim.h  cw32f030_i2c.h  cw32f030_iwdt.h  cw32f030_lvd.h  cw32f030_pwr.h  cw32f030_ram.h  cw32f030_rcc.h  cw32f030_rtc.h  cw32f030_spi.h  cw32f030_systick.h  cw32f030_uart.h  cw32f030_vc.h  cw32f030_wwdt.h  system_cw32f030.h
Libraries/src/: cw32f030_adc.c  cw32f030_atim.c  cw32f030_awt.c  cw32f030_btim.c  cw32f030_crc.c  cw32f030_debug.c  cw32f030_digitalsign.c  cw32f030_dma.c  cw32f030_flash.c  cw32f030_gpio.c  cw32f030_gtim.c  cw32f030_i2c.c  cw32f030_iwdt.c  cw32f030_lvd.c  cw32f030_pwr.c  cw32f030_ram.c  cw32f030_rcc.c  cw32f030_rtc.c  cw32f030_spi.c  cw32f030_systick.c  cw32f030_uart.c  cw32f030_vc.c  cw32f030_wwdt.c  system_cw32f030.c
Listings/: cw32f030c8t6.map  startup_cw32f030.lst
Objects/: cw32f030_adc.crf  cw32f030_adc.d  cw32f030_atim.crf  cw32f030_atim.d  cw32f030_awt.crf  cw32f030_awt.d  cw32f030_btim.crf  cw32f030_btim.d  cw32f030_crc.crf  cw32f030_crc.d  cw32f030_debug.crf  cw32f030_debug.d  cw32f030_digitalsign.crf  cw32f030_digitalsign.d  cw32f030_dma.crf  cw32f030_dma.d  cw32f030_flash.crf  cw32f030_flash.d  cw32f030_gpio.crf  cw32f030_gpio.d  cw32f030_gtim.crf  cw32f030_gtim.d  cw32f030_i2c.crf  cw32f030_i2c.d  cw32f030_iwdt.crf  cw32f030_iwdt.d  cw32f030_lvd.crf  cw32f030_lvd.d  cw32f030_pwr.crf  cw32f030_pwr.d  cw32f030_ram.crf  cw32f030_ram.d  cw32f030_rcc.crf  cw32f030_rcc.d  cw32f030_rtc.crf  cw32f030_rtc.d  cw32f030_spi.crf  cw32f030_spi.d  cw32f030_systick.crf  cw32f030_systick.d  (+19 more)
RTE/_Project/: RTE_Components.h
RTE/_Target_1/: RTE_Components.h
User/inc/: LEGEND.H  ble.h  clock.h  interrupts_cw32f030.h  main.h  motor.h  pwm.h  ws2812.h
User/src/: ble.c  clock.c  interrupts_cw32f030.c  main.c  motor.c  pwm.c  ws2812.c
html/: ble.js  deploy.sh  index.html  legend.js
